FIPS-10096/FIPS-10545 :: Update runtime code to Java 11
Change-Id: Ib46bd7b2ab351099ed8273eaf8b502c10561e309