@@ -52,7 +52,7 @@ public final class IpsStringUtils {
      * only contains whitespace, otherwise {@code false}.
      */
     public static boolean isBlank(String s) {
-        return s == null || s.trim().isEmpty();
+        return s == null || s.isBlank();
     }
 
     /**
